; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_add_incomplete.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_add_incomplete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.typenode = type { i32, i32* }

@incomplete_types = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_incomplete(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.typenode*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call %struct.typenode* @xmalloc(i32 16)
  store %struct.typenode* %4, %struct.typenode** %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load %struct.typenode*, %struct.typenode** %3, align 8
  %7 = getelementptr inbounds %struct.typenode, %struct.typenode* %6, i32 0, i32 1
  store i32* %5, i32** %7, align 8
  %8 = load %struct.typenode*, %struct.typenode** %3, align 8
  %9 = getelementptr inbounds %struct.typenode, %struct.typenode* %8, i32 0, i32 0
  %10 = call i32 @list_add_tail(i32* @incomplete_types, i32* %9)
  ret void
}

declare dso_local %struct.typenode* @xmalloc(i32) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
